trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -151,6 +151,6 @@
 }
 
 .header-image img {
-  max-height: 50%;
+  max-height: 25%;
   max-width: 80%; /* adjust as needed */
 }
